--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -30,7 +30,7 @@ jobs:
         uses: lowlighter/metrics@latest
         with:
           filename: metrics.plugin.projects.svg
-          token: ${{ secrets.METRICS_TOKEN_WITH_SCOPES }}
+          token: ${{ secrets.METRICS_TOKEN }}
           base: ""
           plugin_projects: yes
           plugin_projects_repositories: lowlighter/metrics/projects/1
