--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -82,3 +82,29 @@ jobs:
           base: ""
           plugin_repositories: yes
           plugin_repositories_pinned: 2
+      - name: Generate GitHub Metrics
+        uses: lowlighter/metrics@v3.34  # Updated to the correct version
+        with:
+          token: ${{ secrets.METRICS_TOKEN }}
+          user: miinsun
+          template: classic
+          base: header, activity, community, repositories, metadata
+          base_indepth: true
+          config_octicon: true
+          config_timezone: America/Chicago
+          config_twemoji: true
+          plugin_languages: true
+          plugin_languages_analysis_timeout: 15
+          plugin_languages_analysis_timeout_repositories: 7.5
+          plugin_languages_categories: markup, programming
+          plugin_languages_colors: github
+          plugin_languages_indepth: true
+          plugin_languages_limit: 8
+          plugin_languages_other: true
+          plugin_languages_recent_categories: markup, programming
+          plugin_languages_recent_days: 30
+          plugin_languages_recent_load: 300
+          plugin_languages_sections: most-used
+          plugin_languages_threshold: 0%
+        env:
+          GITHUB_TOKEN: ${{ secrets.METRICS_TOKEN }}
