--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -14,6 +14,9 @@ jobs:
     permissions:
       contents: write
     steps:
+      - uses: lowlighter/metrics@latest
+        with:
+          token: ${{ secrets.METRICS_TOKEN }}
       - name: Recent posts with descriptions and cover images
         uses: lowlighter/metrics@latest
         with:
