--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -7,6 +7,18 @@ on:
   # (optional) Run workflow when pushing on master/main
   push: {branches: ["master", "main"]}
 jobs:
+  readme:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: sarisia/actions-readme-feed@v1
+        name: feed
+        id: feed
+        with:
+          url: 'https://miinsun.tistory.com/rss'
+          file: 'README.md'
+      - if: ${{ steps.feed.outputs.changed == true }}
+        uses: sarisia/actions-commit@master
   github-metrics:
     runs-on: ubuntu-latest
     environment: 
