--- a/.github/workflows/rss.yml
+++ b/.github/workflows/rss.yml
@@ -26,6 +26,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install feedparser
+        pip install beautifulsoup4
     - name: Run Update Python Script
       run: |
         python main.py
